--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <meta property="og:description" content="Crie um Site e prepare a sua empresa para vender mais! 🚀">
         <meta property="og:title" content="Site Vitalício">
         <meta property="og:type" content="Serviços sobre as tecnologias de desenvolvimento de sistemas, incluindo serviços e produtos.">
-        <meta property="og:image" content="assets/images/catsa.jpeg">
+        <meta property="og:image" content="https://github.com/shoppingdosite/shoppingdosite.github.io/blob/main/assets/images/catsa.jpeg?raw=true">
         <meta property="og:site_name" content="Stdio Comunicação">
         <meta name="googlebot" content="Desenvolvimento de sites em Sorocaba" />
     .   <meta name="googlebot" content="Comprar sites em Sorocaba" />
     .   <meta name="googlebot" content="Criar site" />
         <meta name="googlebot" content="STDIO SOROCABA" />
         <meta name="twitter:card" content="Serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
-        <meta name="twitter:image" content="assets/images/catsa.jpeg">
+        <meta name="twitter:image" content="https://github.com/shoppingdosite/shoppingdosite.github.io/blob/main/assets/images/catsa.jpeg?raw=true">
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,700" rel="stylesheet">
         <link rel="apple-touch-icon" href="assets/images/verificado.png">
 
