--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .   <meta name="googlebot" content="Criar site" />
         <meta name="googlebot" content="STDIO SOROCABA" />
         <meta name="twitter:card" content="Serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
-        <meta name="twitter:image" content=https://raw.githubusercontent.com/shoppingdosite/shoppingdosite.github.io/main/assets/images/catsa.jpeg">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/shoppingdosite/shoppingdosite.github.io/main/assets/images/catsa.jpeg">
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,700" rel="stylesheet">
         <link rel="apple-touch-icon" href="assets/images/verificado.png">
 
