--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
             <div class="container">
                 <div class="head_title text-center">
                     <h1>Nós vamos te entregar</h1>
-					<p>todo esse universo digital</p>
+			<p>todo esse universo digital</p>
                 </div>
 
                 <div class="row">
@@ -510,7 +510,7 @@
                                 <i class="fa fa-book"></i>
                                 <div class="separator"></div>
                                 <h4>COPYWRITE</h4>
-                                <p></p>
+                                <p>+500 Copys para vendas</p>
                             </div>
                         </div>
 
@@ -537,7 +537,7 @@
                                 <i class="fa fa-external-link"></i>
                                 <div class="separator"></div>
                                 <h4>TRÁFEGO DIRETO</h4>
-                                <p></p>
+                                <p>+100 mil impressões</p>
                             </div>
                         </div>
 
@@ -552,7 +552,7 @@
                                 <i class="fa fa-coffee"></i>
                                 <div class="separator"></div>
                                 <h4>Relatórios</h4>
-                                <p></p>
+                                <p>Analise em tempo real</p>
                             </div>
                         </div>
 
@@ -561,7 +561,7 @@
                                 <i class="fa fa-tree"></i>
                                 <div class="separator"></div>
                                 <h4>Foco</h4>
-                                <p></p>
+                                <p>No digital o foco é a consistência</p>
                             </div>
                         </div>
 
@@ -570,7 +570,7 @@
                                 <i class="fa fa-paper-plane-o"></i>
                                 <div class="separator"></div>
                                 <h4>Leads</h4>
-                                <p></p>
+                                <p>Clientes sendo afunlados para melhor conversão</p>
                             </div>
                         </div>
 
@@ -579,7 +579,7 @@
                                 <i class="fa fa-folder-open"></i>
                                 <div class="separator"></div>
                                 <h4>Temas</h4>
-                                <p></p>
+                                <p>+5Mil Temas</p>
                             </div>
                         </div>
 
