--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                                 <i class="fa fa-paper-plane-o"></i>
                                 <div class="separator"></div>
                                 <h4>Leads</h4>
-                                <p>Clientes sendo afunlados para melhor conversão</p>
+                                <p>Clientes sendo afunilados para melhor conversão</p>
                             </div>
                         </div>
 
@@ -703,7 +703,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
