--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <meta property="og:image" content="https://raw.githubusercontent.com/shoppingdosite/shoppingdosite.github.io/main/assets/images/catsa.jpeg">
         <meta property="og:site_name" content="Stdio Comunicação">
         <meta name="googlebot" content="Desenvolvimento de sites em Sorocaba" />
-    .   <meta name="googlebot" content="Comprar sites em Sorocaba" />
-    .   <meta name="googlebot" content="Criar site" />
+        <meta name="googlebot" content="Comprar sites em Sorocaba" />
+        <meta name="googlebot" content="Criar site" />
         <meta name="googlebot" content="STDIO SOROCABA" />
         <meta name="twitter:card" content="Serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
         <meta name="twitter:image" content="https://raw.githubusercontent.com/shoppingdosite/shoppingdosite.github.io/main/assets/images/catsa.jpeg">
