--- a/index.html
+++ b/index.html
@@ -624,8 +624,8 @@
                                     </div>
 
                                     <div class="contact_socail_bookmark">
-                                        <a href=""><i class="fa fa-facebook"></i></a>
-                                        <a href=""><i class="fa fa-instagram"></i></a>
+                                        <a href="https://www.facebook.com/departamento.stdio?mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a>
+                                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fa fa-instagram"></i></a>
                                         <a href="https://wa.link/id8viu"><i class="fa fa-whatsapp"></i></a>
                                     </div>
                                 </div>
@@ -647,12 +647,12 @@
                                 <div class="menu-item">
                                     <h5>Outros Links</h5>
                                     <ul>
-                                        <a href="#"><li>POWER BI DESKTOP</a></li>
-                                        <a href="#"><li>MOBILE</a></li>
-                                        <a href="#"><li>SEE ALL DOWNLOADS</a></li>
-                                        <a href="#"><li>POWER BI DESKTOP</a></li>
-                                        <a href="#"><li>MOBILE</a></li>
-                                        <a href="#"><li>SEE ALL DOWNLOADS</a></li>
+                                        <a href="https://wa.link/id8viu"><li>POWER BI DESKTOP</a></li>
+                                        <a href="https://wa.link/id8viu"><li>MOBILE</a></li>
+                                        <a href="https://wa.link/id8viu"><li>SEE ALL DOWNLOADS</a></li>
+                                        <a href="https://wa.link/id8viu"><li>POWER BI DESKTOP</a></li>
+                                        <a href="https://wa.link/id8viu"><li>MOBILE</a></li>
+                                        <a href="https://wa.link/id8viu"><li>SEE ALL DOWNLOADS</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -661,11 +661,11 @@
                                 <div class="menu-item">
                                     <h5>Políticas</h5>
                                     <ul>
-                                        <a href="#"><li>TERMOS DE USO</a></li>
-                                        <a href="#"><li>AVISO LEGAL</a></li>
-                                        <a href="#"><li>POLITICA DE TERMOS E CONDIÇÕES</a></li>
-                                        <a href="#"><li>POLITICA DE PRIVACIDADE</a></li>
-                                        <a href="#"><li>POLITICA DE REEMBOLSO</a></li>
+                                        <a href="https://wa.link/id8viu"><li>TERMOS DE USO</a></li>
+                                        <a href="https://wa.link/id8viu"><li>AVISO LEGAL</a></li>
+                                        <a href="https://wa.link/id8viu"><li>POLITICA DE TERMOS E CONDIÇÕES</a></li>
+                                        <a href="https://wa.link/id8viu"><li>POLITICA DE PRIVACIDADE</a></li>
+                                        <a href="https://wa.link/id8viu"><li>POLITICA DE REEMBOLSO</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -674,11 +674,11 @@
                                 <div class="menu-item">
                                     <h5>Informações</h5>
                                     <ul>
-                                        <a href="#"><li>SUPORTE</a></li>
-                                        <a href="#"><li>DESENVOLVEDORES</a></li>
-                                        <a href="#"><li>PORTFÓLIO</a></li>
-                                        <a href="#"><li>EMAIL</a></li>
-                                        <a href="#"><li>ANALISE EM TEMPO REAL</a></li>
+                                        <a href="https://wa.link/id8viu"><li>SUPORTE</a></li>
+                                        <a href="https://wa.link/id8viu"><li>DESENVOLVEDORES</a></li>
+                                        <a href="https://wa.link/id8viu"><li>PORTFÓLIO</a></li>
+                                        <a href="https://wa.link/id8viu"><li>EMAIL</a></li>
+                                        <a href="https://wa.link/id8viu"><li>ANALISE EM TEMPO REAL</a></li>
                                     </ul>
                                 </div>
                             </div>
