--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
                             <div class="single_features_right ">
                                 
                                 <h1>Site Vitalício</h1>
-                                <h2>Pague UMA única vez duração pra toda vida!</h2>
-                                  <p>  ✅ Site personalizado com Criativos</p>
-                                  <p>  ✅️ Copywrite e Métricas que convertem</p>
-                                  <p>  ✅️ Menor custo no CPC das agências</p>
-                                  <p>  ✅ Landingpage com engajamento</p>
-                                  <p>  ✅ Logo</p>
-                                  <p>  ✅ Formulário e Funil de vendas
-                                  <p>  ✅ Código responsivo e interativo</p>
-                                  <p>  ✅️ Landingpage para todos os nichos</p>
+                                <h2>Adquira seu Site Vitalício com pagamento único e desfrute de sua presença online para toda a vida, sem mensalidades!</h2>
+                                  <p>  ✅✅✅ Site personalizado com Criativos</p>
+                                  <p>  ✅️✅✅ Copywrite e Métricas que convertem</p>
+                                  <p>  ✅️✅✅ Menor custo no CPC das agências</p>
+                                  <p>  ✅✅✅ Landingpage com engajamento</p>
+                                  <p>  ✅✅✅ Logo</p>
+                                  <p>  ✅✅✅ Formulário e Funil de vendas
+                                  <p>  ✅✅✅ Código responsivo e interativo</p>
+                                  <p>  ✅️✅✅ Landingpage para todos os nichos</p>
                 
                                 <ul>
                                 </ul>
