--- a/index.html
+++ b/index.html
@@ -578,11 +578,12 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-menu-wrapper">
+			    <br><br>
 
                         <div class="col-md-8 col-sm-12 col-xs-12">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                                 <div class="menu-item">
-                                    <h5>Outros Links</h5>
+                                    <h5>OUTROS LINKS</h5>
                                     <ul>
                                         <a href="https://wa.link/id8viu"><li>POWER BI DESKTOP</a></li>
                                         <a href="https://wa.link/id8viu"><li>MOBILE</a></li>
@@ -596,7 +597,7 @@
 
                             <div class="col-md-4 col-sm-6 col-xs-12">
                                 <div class="menu-item">
-                                    <h5>Políticas</h5>
+                                    <h5>POLÍTICA</h5>
                                     <ul>
                                         <a href="https://wa.link/id8viu"><li>TERMOS DE USO</a></li>
                                         <a href="https://wa.link/id8viu"><li>AVISO LEGAL</a></li>
@@ -609,7 +610,7 @@
 
                             <div class="col-md-4 col-sm-6 col-xs-12">
                                 <div class="menu-item">
-                                    <h5>Informações</h5>
+                                    <h5>INFORMAÇÕES</h5>
                                     <ul>
                                         <a href="https://wa.link/id8viu"><li>SUPORTE</a></li>
                                         <a href="https://wa.link/id8viu"><li>DESENVOLVEDORES</a></li>
@@ -623,7 +624,7 @@
 
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="menu-item">
-                                <h5>Assinar</h5>
+                                <h5>ASSINAR</h5>
                                 <p>Receber Insights de graça no seu email</p>
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Cadastre seu melhor email">
@@ -645,7 +646,7 @@
 
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="footer-brand">
-                                <img src="assets/images/logo.png" alt="logo" />
+                                <!--img src="assets/images/logo.png" alt="logo" /--->
                             </div>
                         </div>
 
