--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="col-sm-6 margin-top-60">
                             <div class="single_features_right ">
                                 
-                                <h1>Site Vitalício</h1>
+                                <h1>SITE VITALÍCIO</h1>
                                 <h2>Adquira seu Site Vitalício com pagamento único e desfrute de sua presença online para toda a vida, sem mensalidades!</h2>
                                   <p>  ✅✅✅ Site personalizado com Criativos</p>
                                   <p>  ✅️✅✅ Copywrite e Métricas que convertem</p>
@@ -129,11 +129,11 @@
 
                         <div class="col-sm-6 margin-top-60">
                             <div class="single_features_right ">
-                                <h1>Nós Fazemos Seu Site</h1>
-                                <h2>Completo com tudo isso e muito mais</h2>
+                                <h1>BUSCAMOS A EVOLUÇÃO HUMANA ATRAVÉS DA CRIAÇÃO E TRANSFORMAÇÃO DE NEGÓCIOS DIGITAIS</h1>
+                                <h2>SEU SITE TOP 1º</h2>
                                     <p><img src="assets/images/verificado50.png" alt="" /> Ganhe o selo de verificado</p>
-                                    <p>  🔥 Hotsites </p>
-                                    <p>  ✅ Blogs</p>
+                                    <p>  🔥 Hotsites Que Vendem </p>
+                                    <p>  ✅ Blogs Editaveis</p>
                                     <p>  ✅ Plugins Para Turbinar Seus Sites</p>
                                     <p>  ✅ Portal de Notícias</p>
                                     <p>  ✅ Página de Captura</p>
@@ -170,7 +170,7 @@
                         <div class="head_title text-center">
 				<br>
                             <h2>SITE PARA TODO O SEMPRE</h2>
-                            <p>Já pensou pagar uma única vez, e ter um site para sempre ?!??</p>
+                            <p>O processo ocorre em etapas, que podem ser repetidas em ciclos de amadurecimento do negócio desenvolvido. As etapas pelas quais a sua ideia passa a cada ciclo são </p>
                         </div>
 
                         <div class="service_content">
@@ -180,8 +180,8 @@
                                         <img src="assets/images/flaticon1.png" alt="" />
                                     </div>
                                     <div class="single_service_right">
-                                        <h2>Chekout Transparente</h2>
-                                        <p>Encaminhe emails automáticoS lembrando seu cliente do carrinho</p>
+                                        <h2>PROVA</h2>
+                                        <p>Planejamos e desenvolvemos a solução com as funcionalidades priorizadas.</p>
                                     </div>
                                 </div>
                             </div>
@@ -191,8 +191,8 @@
                                        <img src="assets/images/flaticon2.png" alt="" />
                                     </div>
                                     <div class="single_service_right">
-                                        <h2>Copywrite</h2>
-                                        <p>Textos chamativos, e que convertem, obtenha resultados, afinal um site vende!</p>
+                                        <h2>PROGRESSÃO</h2>
+                                        <p>Medimos a aceitação, concorrências e lucratividade do produto no mercado.</p>
                                     </div>
                                 </div>
                             </div>
