--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                   <p>  ✅️✅✅ Copywrite e Métricas que convertem</p>
                                   <p>  ✅️✅✅ Menor custo no CPC das agências</p>
                                   <p>  ✅✅✅ Landingpage com engajamento</p>
-                                  <p>  ✅✅✅ Logo</p>
+                                  <p>  ✅✅✅ Design Thinking</p>
                                   <p>  ✅✅✅ Formulário e Funil de vendas
                                   <p>  ✅✅✅ Código responsivo e interativo</p>
                                   <p>  ✅️✅✅ Landingpage para todos os nichos</p>
@@ -129,8 +129,8 @@
 
                         <div class="col-sm-6 margin-top-60">
                             <div class="single_features_right ">
-                                <h1>BUSCAMOS A EVOLUÇÃO HUMANA ATRAVÉS DA CRIAÇÃO E TRANSFORMAÇÃO DE NEGÓCIOS DIGITAIS</h1>
-                                <h2>SEU SITE TOP 1º</h2>
+                                <h1></h1>
+                                <h2>BUSCAMOS A EVOLUÇÃO HUMANA ATRAVÉS DA CRIAÇÃO E TRANSFORMAÇÃO DE NEGÓCIOS DIGITAIS</h2>
                                     <p><img src="assets/images/verificado50.png" alt="" /> Ganhe o selo de verificado</p>
                                     <p>  🔥 Hotsites Que Vendem </p>
                                     <p>  ✅ Blogs Editaveis</p>
