--- a/index.html
+++ b/index.html
@@ -523,8 +523,9 @@
                 <div class="row">
                     <div class="main_contact whitebackground">
                         <div class="head_title text-center">
+				<br><br>
                             <h2>ENTRE EM CONTATO</h2>
-							<p>Quer tirar suas dúvidas, pode nos visitar pelo whatsapp ou por email!</p>
+				<p>Quer tirar suas dúvidas, pode nos visitar pelo whatsapp ou por email!</p>
                         </div>
                         <div class="contact_content">
                             <div class="col-md-6">
@@ -545,7 +546,7 @@
                                         </div>
 
                                         <div class="center-content">
-                                            <input type="submit" value="Enviar" class="btn btn-default">
+                                            <h5><input type="submit" value="Enviar" class="btn btn-default"></h5>
                                         </div>
                                     </form>
                                 </div>
