--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                                         </div>
 
                                         <div class="center-content">
-                                            <h5><input type="submit" value="Enviar" class="btn btn-default"></h5>
+                                            <h5><input type="submit" value="ENVIAR" class="btn btn-default"></h5>
                                         </div>
                                     </form>
                                 </div>
