--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <h1>SITE VITALÍCIO</h1>
                                 <h2>Adquira seu Site Vitalício com pagamento único e desfrute de sua presença online para toda a vida, sem mensalidades!</h2>
                                   <p>  ✅✅✅ Site personalizado com Criativos</p>
-                                  <p>  ✅️✅✅ Copywrite e Métricas que convertem</p>
+                                  <p>  ✅️✅✅ Métricas que convertem</p>
                                   <p>  ✅️✅✅ Menor custo no CPC das agências</p>
                                   <p>  ✅✅✅ Landingpage com engajamento</p>
                                   <p>  ✅✅✅ Design Thinking</p>
