--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
         <section id="business" class="portfolio sections">
             <div class="container">
                 <div class="head_title text-center">
-                    <h1>Nós vamos te entregar</h1>
-			<p>todo esse universo digital</p>
+                    <h1>Diferencie-se da Concorrência!/h1>
+			<p>Aproveite nossas Vantagens Exclusivas e garanta sua presença online:</p>
                 </div>
 
                 <div class="row">
@@ -450,7 +450,7 @@
                                 <i class="fa fa-bug"></i>
                                 <div class="separator"></div>
                                 <h4>ANTI-BLOCK</h4>
-                                <p></p>
+                                <p>Site Pronto ou Dinheiro de Volta</p>
                             </div>
                         </div>
 
@@ -459,7 +459,7 @@
                                 <i class="fa fa-gears"></i>
                                 <div class="separator"></div>
                                 <h4>REVISÃO</h4>
-                                <p></p>
+                                <p>Site Compatível com Celular</p>
                             </div>
                         </div>
 
@@ -490,8 +490,8 @@
                             <div class="community-edition">
                                 <i class="fa fa-tree"></i>
                                 <div class="separator"></div>
-                                <h4>Foco</h4>
-                                <p>No digital o foco é a consistência</p>
+                                <h4>Carteiras Digitais</h4>
+                                <p>Gerenciamento de Redes Sociais</p>
                             </div>
                         </div>
 
