--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                                 <i class="fa fa-paper-plane-o"></i>
                                 <div class="separator"></div>
                                 <h4>Leads</h4>
-                                <p>Clientes sendo afunilados para melhor conversão</p>
+                                <p>Testes e Publicações</p>
                             </div>
                         </div>
 
