--- a/index.html
+++ b/index.html
@@ -430,8 +430,9 @@
         <section id="business" class="portfolio sections">
             <div class="container">
                 <div class="head_title text-center">
-                    <h1>Diferencie-se da Concorrência!/h1>
-			<p>Aproveite nossas Vantagens Exclusivas e garanta sua presença online:</p>
+			<br><br>
+                    <h1>Diferencie-se da Concorrência</h1>
+			<p>Aproveite nossas Vantagens Exclusivas e garanta sua presença online: </p>
                 </div>
 
                 <div class="row">
