--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <h2>BUSCAMOS A EVOLUÇÃO HUMANA ATRAVÉS DA CRIAÇÃO E TRANSFORMAÇÃO DE NEGÓCIOS DIGITAIS</h2>
                                     <p><img src="assets/images/verificado50.png" alt="" /> Ganhe o selo de verificado</p>
                                     <p>  🔥 Hotsites Que Vendem </p>
-                                    <p>  ✅ Blogs Editaveis</p>
+                                    <p>  ✅ Blogs Editáveis</p>
                                     <p>  ✅ Plugins Para Turbinar Seus Sites</p>
                                     <p>  ✅ Portal de Notícias</p>
                                     <p>  ✅ Página de Captura</p>
