--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <div class="head_title text-center">
 			<br><br>
                     <h1>Diferencie-se da Concorrência</h1>
-			<p>Aproveite nossas Vantagens Exclusivas e garanta sua presença online: </p>
+			<p>Aproveite nossas Vantagens Exclusivas e garanta sua presença online </p>
                 </div>
 
                 <div class="row">
