--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="col-sm-6 margin-top-60">
                             <div class="single_features_right ">
                                 
-                                <h1>SITE VITALÍCIO</h1>
+                                <!--h1>SITE VITALÍCIO</h1-->
                                 <h2>Adquira seu Site Vitalício com pagamento único e desfrute de sua presença online para toda a vida, sem mensalidades!</h2>
                                   <p>  ✅✅✅ Site personalizado com Criativos</p>
                                   <p>  ✅️✅✅ Métricas que convertem</p>
